# perception_pipeline

config/: example.xml
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: BoundingBox3D.msg  DetectedObject2D.msg  DetectedObject3D.msg  DetectedObject3DArray.msg  ObjectClass.msg  ObjectClasses.msg  ObjectPose3D.msg  ObjectShape2D.msg  ObjectShape3D.msg  Score.msg  SourceInfo.msg  TrackedObject2D.msg  TrackedObject2DArray.msg  TrackedObject3D.msg
perception_pipeline/: CMakeLists.txt  package.xml
perception_pipeline/config/: example.xml
perception_pipeline/include/perception_pipeline/: object_classes_server_component.h  percaption_node_base.h
perception_pipeline/launch/: object_classes_server.launch.xml  object_classes_server.py
perception_pipeline/src/: object_classes_server_component.cpp  object_classes_server_node.cpp  perception_node_base.cpp
